incluido el último pleno (#189)

--- a/ciudadanos.html
+++ b/ciudadanos.html
@@ -79,20 +79,20 @@
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos. Es el partido que menos votos en contra recibe.</p>
                     <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 11 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 22 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 23 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 6 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 18 veces en contra.</p>
                 </div>
             </div>
             <div class='step' data-step='2'>
                 <div class="step-blanco">
-                    <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
+                    <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A SU FAVOR?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 39 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 42 veces a su favor.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 17 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 51 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 19 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 54 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 20 veces a su favor.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
@@ -100,8 +100,8 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> se ha abstenido en 17 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> se ha abstenido en 18 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> se ha abstenido en 18 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> se ha abstenido en 20 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> se ha abstenido en 8 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> se ha abstenido en 12 ocasiones.</p>
                 </div>
@@ -111,8 +111,8 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Ciudadanos</strong> ha votado en contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 6 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>ZEC</strong> en 21 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 7 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>ZEC</strong> en 22 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PSOE</strong> en 6 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra de <strong>CHA</strong> en 16 ocasiones.</p>
                 </div>
@@ -122,10 +122,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que Ciudadanos ha votado a favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 79 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 23 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 63 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 32 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 81 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 24 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 67 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 33 ocasiones.</p>
                 </div>
             </div>
         </div>
