--- a/psoe.html
+++ b/psoe.html
@@ -95,20 +95,20 @@
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos.</p>
                     <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 18 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 35 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 39 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 6 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 8 veces en contra.</p>
                 </div>
             </div>
             <div class='step' data-step='2'>
                 <div class="step-blanco">
-                    <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
+                    <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A SU FAVOR?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 49 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 36 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 51 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 49 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 58 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 20 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 71 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 62 veces a su favor.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
@@ -127,7 +127,7 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>PSOE</strong> ha votado en contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 37 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 38.1 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra de <strong>ZEC</strong> en 14 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra de <strong>Ciudadanos</strong> en 6 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra de <strong>CHA</strong> en 6 ocasiones.</p>
@@ -138,10 +138,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                 </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>PSOE</strong> ha votado a favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 49 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 36 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 51 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 49 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 51 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 40 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 54 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 50 ocasiones.</p>
                 </div>
             </div>
         </div>
