--- a/cha.html
+++ b/cha.html
@@ -79,7 +79,7 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>PP</strong> 35 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>PP</strong> 36 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 9 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>PSOE</strong> 6 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 16 veces en contra.</p>
@@ -87,13 +87,13 @@
             </div>
             <div class='step' data-step='2'>
                 <div class="step-blanco">
-                    <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
+                    <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A SU FAVOR?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>PP</strong> 9 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 47 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>PSOE</strong> 49 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 32 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> 48 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>PSOE</strong> 50 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 33 veces a su favor.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
@@ -103,8 +103,8 @@
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>PP</strong> se ha abstenido en 23 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>ZEC</strong> se ha abstenido en 6 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>PSOE</strong> se ha abstenido en 9 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> se ha abstenido en 23 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>PSOE</strong> se ha abstenido en 11 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> se ha abstenido en 25 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='4'>
@@ -112,7 +112,7 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Chunta Aragonesista</strong> ha votado en contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 56 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 59 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra de <strong>ZEC</strong> en 1 ocasión.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PSOE</strong> en 8 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra de <strong>Ciudadanos</strong> en 18 ocasiones.</p>
@@ -123,10 +123,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                 </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Chunta Aragonesista</strong> votado a favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 23 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 55 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 60 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 19 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 24 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 59 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 62 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 20 ocasiones.</p>
                 </div>
             </div>
         </div>
