--- a/zec.html
+++ b/zec.html
@@ -98,21 +98,21 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 53 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 55 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 14 veces en contra.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 21 veces en contra.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 22 veces en contra.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> en 1 ocasión en su contra.</p>
                 </div>
             </div>
             <div class='step' data-step='2'>
                 <div class="step-blanco">
-                    <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
+                    <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A SU FAVOR?
                 </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
                     <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> 2 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 36 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 23 veces a su favor.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 55 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> 40 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> 24 veces a su favor.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> 59 veces a su favor.</p>
                 </div>
             </div>
             <div class='step' data-step='3'>
@@ -120,9 +120,9 @@
                     <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> se ha abstenido en 15 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> se ha abstenido en 22 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> se ha abstenido en 21 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PP</strong> se ha abstenido en 17 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">El <strong>PSOE</strong> se ha abstenido en 23 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> se ha abstenido en 24 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50"><strong>CHA</strong> se ha abstenido en 4 ocasiones.</p>
                 </div>
             </div>
@@ -131,9 +131,9 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                 </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que En contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 80 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PSOE</strong> en 35 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>Ciudadanos</strong> en 22 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 83 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PSOE</strong> en 39 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>Ciudadanos</strong> en 23 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">En contra de <strong>CHA</strong> en 9 ocasiones.</p>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que A favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 17 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 7 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 20 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 17 ocasiones.</p>
                     <p class="partidos-grafico-parrafo maw-50">A favor de <strong>CHA</strong> en 47 ocasiones.</p>
